--- a/uzduotis/07-30/uzduotis2/index.html
+++ b/uzduotis/07-30/uzduotis2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,62 +8,75 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">  
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 <style>
-    *{
-    margin: 0;
-}
-body {
-    height: 100vh;
-    background: black url(img/bg.jpg) no-repeat center center / cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Lato", sans-serif;
-}
-.container {
-    display: flex;
-    justify-content: center;
-    height: 300px;
-}
-.logo {
-    background-color: black;
-    padding: 10px;
-}
-.social {
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    margin-right: 30px;
-    margin-top: 80px;
-}
-.social-links {
-    display: flex;
-    border: 1px solid;
-    padding: 10px;
-}
-.text {
-    background-color: white;
-    padding: 20px 0 0 20px;
-}
-.firs-letter-contatcs {
-    font-weight: bold;
-}
-.website {
-    text-decoration: none;
-    color: black;
-}
-.line {
-    padding-bottom: 10px;
-    border-bottom-style: solid;
-    border-bottom-width: 1px;
-    width: fit-content;
-}
-.underline {
-    padding-top: 10px;
-}
+    * {
+        margin: 0;
+    }
+
+    body {
+        height: 100vh;
+        background: black url(img/bg.jpg) no-repeat center center / cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Lato", sans-serif;
+    }
+
+    .container {
+        display: flex;
+        justify-content: center;
+        height: 300px;
+    }
+
+    .logo {
+        background-color: black;
+        padding: 10px;
+    }
+
+    .social {
+        display: flex;
+        gap: 15px;
+        align-items: center;
+        margin-right: 30px;
+        margin-top: 80px;
+    }
+
+    .social-links {
+        display: flex;
+        border: 1px solid;
+        padding: 10px;
+    }
+
+    .text {
+        background-color: white;
+        padding: 20px 0 0 20px;
+    }
+
+    .firs-letter-contatcs {
+        font-weight: bold;
+    }
+
+    .website {
+        text-decoration: none;
+        color: black;
+    }
+
+    .line {
+        padding-bottom: 10px;
+        border-bottom-style: solid;
+        border-bottom-width: 1px;
+        width: fit-content;
+    }
+
+    .underline {
+        padding-top: 10px;
+    }
 </style>
+
 <body>
     <div class="container">
         <div class="logo"> <img src="img/1.png" alt="" width="100px"></div>
@@ -73,14 +87,15 @@ body {
             <p><span class="firs-letter-contatcs">E</span>: hello@petrusrex.com</p>
             <p><a href="http://www.petrusrex.com" class="website">www.petrusrex.com</a></p>
             <div class="social">
-                <div class="social-links"><img src="img/2.svg" alt="" width="20px" height="20px" ></div>
+                <div class="social-links"><img src="img/2.svg" alt="" width="20px" height="20px"></div>
                 <div class="social-links"><img src="img/3.svg" alt="" width="20px" height="20px"></div>
                 <div class="social-links"><img src="img/4.svg" alt="" width="20px" height="20px"></div>
                 <div class="social-links"><img src="img/5.svg" alt="" width="20px" height="20px"></div>
                 <div class="social-links"><img src="img/6.svg" alt="" width="20px" height="20px"></div>
                 <div class="social-links"><img src="img/7.svg" alt="" width="20px" height="20px"></div>
-            </div> 
+            </div>
         </div>
     </div>
 </body>
+
 </html>
