--- a/uzduotis/08-01/uzduotis 2/index.html
+++ b/uzduotis/08-01/uzduotis 2/index.html
@@ -15,6 +15,7 @@
                 <img src="https://svgshare.com/i/11ku.svg" alt="">
                 <input type="text" id="number" placeholder="LT5165151651516515165151651">
             </div>
+            <div class="edit">Edit</div>
         </div>
         <div class="expirary-date">
             <p class="text">Expiry Date <br> <span>Enter the expiration date of card</span></p>
