--- a/uzduotis/08-06/uzduotis 1/index.html
+++ b/uzduotis/08-06/uzduotis 1/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div class="row">
@@ -61,15 +63,26 @@
             <div class="frame-big">
                 <div class="big">
                     <img src="img/1.png" class="imgbig" alt="">
-                    <div class="stars">
-                        <img src="img/star.svg" class="icon" alt="">
-                        <img src="img/star.svg" class="icon" alt="">
-                        <img src="img/star.svg" class="icon" alt="">
-                        <img src="img/star.svg" class="icon" alt="">
-                        <img src="img/star.svg" class="icon" alt="">
+                    <div class="rating-price">
+                        <div class="stars">
+                            <img src="img/star.svg" class="icon" alt="">
+                            <img src="img/star.svg" class="icon" alt="">
+                            <img src="img/star.svg" class="icon" alt="">
+                            <img src="img/star.svg" class="icon" alt="">
+                            <img src="img/StarOff.svg" class="icon" alt="">
+                        </div>
+                        <span>$110.97</span>
                     </div>
-                    <small>Nike Air Force 1 '07 LV8 <span>$110.97</span></small>
-                    <input type="number" id="quantity" name="quantity" min="1" max="5">
+                    <div class="name">Nike Air Force 1 '07 LV8 </div>
+                    <div class="type">Men's Shoes</div>
+                    <div class="add">
+                        <select class="dropdown">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                        <button>add to cart</button>
+                    </div>
                 </div>
                 <div class="big">
                     <img src="img/2.png" alt="">
@@ -103,4 +116,5 @@
         </div>
     </div>
 </body>
+
 </html>
