--- a/uzduotis/08-07/uzduotis1/index.html
+++ b/uzduotis/08-07/uzduotis1/index.html
@@ -63,16 +63,16 @@
             </div>
         </div>
     </header>
-        <div class="frame-1">
-            <div class="overlay"></div>
-            <div class="logo">                
-                <img src="../img/icons/Vector.png" alt="">
-            </div>
-            <div class="main-middle-text">
-                <h1>THE ART OF KINFOLK</h1>
-                <p>An iconic lens on life and style.</p>
-            </div>
+    <div class="frame-1">
+        <div class="overlay"></div>
+        <div class="logo">
+            <img src="./img/icons/Vector.png" alt="">
         </div>
+        <div class="main-middle-text">
+            <h1>THE ART OF KINFOLK</h1>
+            <p>An iconic lens on life and style.</p>
+        </div>
+    </div>
     </div>
     <div class="frame-2">
         <div class="left-side">
@@ -266,7 +266,7 @@
             <div class="top">Sign up to the Kinfolk newsletter</div>
             <div class="signup">
                 <div class="email">YOUR EMAIL</div>
-                <input type="email" >
+                <input type="email">
                 <div class="submit">SUBMIT</div>
             </div>
             <div class="agree">
