--- a/uzduotis/09-06/index.html
+++ b/uzduotis/09-06/index.html
@@ -23,6 +23,7 @@
         }
     </style>
     <div class="container">
+        <div class="breedNumber"></div>
         <div class="left">
             <select class="pets">
                 <option value="">--Please choose breed--</option>
