--- a/uzduotis/09-10/index.html
+++ b/uzduotis/09-10/index.html
@@ -6,12 +6,8 @@
     <title>Cocktails</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        img {
-            max-width: 100%;
-        }
-    </style>
 </head>
 <body>
     <div class="container pt-5">
@@ -25,7 +21,23 @@
                 placeholder="Enter cocktail name"
             >
             <button class="btn btn-primary">Search</button>
-        </form>
-        <div class="result pt-4"></div>
 
+        </form>
+        <div class="filter">
+            <div class="filterByAlcoholic">Filter by 
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="Alcoholic" id="alcoholicCheckbox" checked>
+                    <label class="form-check-label" for="alcoholicCheckbox">
+                        Alcoholic
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="Non_Alcoholic" id="nonAlcoholicCheckbox">
+                    <label class="form-check-label" for="nonAlcoholicCheckbox">
+                        Non_Alcoholic
+                    </label>
+                </div>
+            </div>
+        </div>
+        <div class="result pt-4"></div>
     </div>
