--- a/uzduotis/09-10/index.html
+++ b/uzduotis/09-10/index.html
@@ -21,7 +21,7 @@
                 placeholder="Enter cocktail name"
             >
             <button class="btn btn-primary">Search</button>
-
+            <button onclick="random(event)" class="btn btn-secondary">I feel lucky</button>
         </form>
         <div class="result pt-4"></div>
     </div>
