--- a/uzduotis/09-12/index.html
+++ b/uzduotis/09-12/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filmai</title>
+    <title>Movie</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
@@ -24,9 +24,9 @@
         </form>
         <div class="result"></div>
         <ul class="nav">
-            <li onclick="" class="back">Previous</li>
+            <li class="back">Previous</li>
             <li class="page-number">1</li>
-            <li onclick="" class="next">Next</li>
+            <li class="next">Next</li>
         </ul>
     </div>
 </body>
