--- a/uzduotis/09-12/index.html
+++ b/uzduotis/09-12/index.html
@@ -21,6 +21,7 @@
                 <option value="full">Full</option>
             </select>
             <button type="submit" class="btn">Search</button>
+            <button type="button" class="btn" id="resetBtn">Reset</button>
         </form>
         <div class="result"></div>
         <ul class="nav">
