--- a/uzduotis/09-12/index.html
+++ b/uzduotis/09-12/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <form class="input" onsubmit="searchMovies(event)">
+        <form class="input">
             <label for="title">Title:</label>
             <input type="text" id="title" class="control" placeholder="Enter movie name" required>
             <label for="year">Year:</label>
